--- a/input.conf
+++ b/input.conf
@@ -4,7 +4,7 @@
 
 # mouse
 
-MOUSE_BTN0     ignore
+#MOUSE_BTN0     script-binding progressbar/seek-to-mouse
 MOUSE_BTN0_DBL cycle fullscreen
 MOUSE_BTN2     cycle pause
 MOUSE_BTN3     ignore
@@ -39,13 +39,19 @@ CTRL+LEFT  osd-msg-bar sub-seek -1
 CTRL+UP    add cache-size +50000 ; show-text "Cache Size: ${cache-size}\n| Used: ${cache-used}\n| Free: ${cache-free}"
 CTRL+DOWN  add cache-size -50000 ; show-text "Cache Size: ${cache-size}\n| Used: ${cache-used}\n| Free: ${cache-free}"
 
+ALT+RIGHT playlist-next
+ALT+LEFT  playlist-prev
+
+ALT+UP    script-message osc-playlist
+ALT+DOWN  script-message osc-playlist
+
 PGUP  osd-msg-bar seek +600 relative+keyframes
 PGDWN osd-msg-bar seek -600 relative+keyframes
 
 
 
-# [1] [2] [3] [4] [5] [6] [7] [8] [9] [0]
-# [!] [@]  #   $   %   ^   &   *  [(] [)]
+# [§] [1] [2] [3] [4] [5] [6] [7] [8] [9] [0]
+#  ±  [!] [@]  #   $   %   ^   &   *  [(] [)]
 
 1      add contrast -1 ; show-text "Contrast: ${contrast}"
 2      add contrast +1 ; show-text "Contrast: ${contrast}"
@@ -57,10 +63,11 @@ PGDWN osd-msg-bar seek -600 relative+keyframes
 8      add saturation +1 ; show-text "Saturation: ${saturation}"
 
 9      add volume -2 ; show-text "Volume: ${volume}"
-0      add volume +2 ; show-text "Volume: ${volume}"
 (      add balance -0.1 ; show-text "Audio Balance (pan): ${balance}"  # adjust audio balance in favor of left
+0      add volume +2 ; show-text "Volume: ${volume}"
 )      add balance +0.1 ; show-text "Audio Balance (pan): ${balance}"  #                                  right
 
+§      script-binding progressbar/toggle-inactive-bar
 !      cycle ontop
 @      cycle-values vf "format=colorlevels=full" "format=colorlevels=auto" "format=colorlevels=limited"
 
@@ -72,35 +79,33 @@ $      ignore
 *      ignore
 
 
-
 # [q] [w] [e] [r] [t] [y] u [i] [o] [p]
 # [Q] [W] [E] [R] [T] [Y] U [I]  O   P
 
 q      quit
 Q      quit-watch-later
 
-w      playlist-prev ; show-text "${playlist}"
-e      playlist-next ; show-text "${playlist}"
-W      show-text "${playlist}"
-E      show-text "${playlist}"
+w      script-message osc-playlist
+W      playlist-clear
+e      playlist-prev
+E      playlist-prev ; script-message osc-playlist
+r      playlist-next
+R      playlist-next ; script-message osc-playlist
 
-r      cycle-values video-rotate 90 180 270 0
-R      ignore
+t      cycle-values video-rotate 90 180 270 0
+T      ignore
 
-t      set ab-loop-a ${time-pos}
-y      set ab-loop-b ${time-pos}
-T      set ab-loop-a no
-Y      set ab-loop-b no
-
-u      ignore
-U      ignore
+y      set ab-loop-a ${time-pos}
+Y      set ab-loop-a no
+u      set ab-loop-b ${time-pos}
+U      set ab-loop-b no
 
 i      script-binding stats/display_stats
 I      script-binding stats/display_stats_toggle
 o      osd
 O      ignore
-p      show-progress
-P      ignore
+p      cycle-values opengl-shaders "~/.mpv/shaders/nnedi3-nns32-win8x4.hook" ""
+P      cycle-values opengl-shaders "~/.mpv/shaders/SSimSuperRes.glsl" ""
 
 
 
@@ -108,7 +113,7 @@ P      ignore
 # [A] [S] [D] [F] [G] [H] [J] [K] [L]
 
 a      cycle audio                          # switch audio streams
-A      cycle-values af "lavfi=[dynaudnorm=f=200:g=11:r=0.2]" "drc:1" "drc:2" ""         # dynamic range compression
+A      cycle-values af "lavfi=[dynaudnorm=f=200:g=11:r=0.2]" "acompressor" ""         # dynamic range compression
 
 s      cycle sub                            # cycle through subtitles
 S      cycle sub-visibility
@@ -120,16 +125,19 @@ D      cycle-values video-aspect "4:3" "16:9" "16:10" "2.35:1" "no" "-1"
 CTRL+d cycle video
 
 f      cycle fullscreen ; show-text "Scale: ${window-scale}"
-F      vf clr ""                            # clear all filters
+F      vf clr "" ; show-text "Filters cleared"
 g      cycle-values video-sync display-resample audio ; cycle-values interpolation yes no ; show-text "Interpolation: ${interpolation} (${tscale})"
 G cycle-values tscale "oversample" "linear" "catmull_rom" "mitchell" "bicubic" ; show-text "Interpolation: ${interpolation} (${tscale})"
 CTRL+g cycle-values interpolation no yes ; show-text "Interpolation: ${interpolation} (${tscale})"
+h      set input-ipc-server "/tmp/mpvsocket" ; show-text "Socket set"
+H      vf clr "" ; set input-ipc-server "" ; show-text "Filters cleared"
 CTRL+h vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.py:2
 j      cycle deband
 J      cycle deinterlace
 CTRL+j script-binding autodeint
 k      vf toggle "lavfi=[hqdn3d=2.0]"       # denoise
 K      vf toggle "lavfi=[unsharp]"          # sharpen
+CTRL+k vf toggle vapoursynth=~~/vs-scripts/decimate.py  # fix 24FPS videos encoded at 30FPS
 
 l      cycle-values loop yes no ; show-text "${?=loop==inf:Looping enabled}${?=loop==no:Looping disabled}"
 L      cycle-values loop-file yes no ; show-text "${?=loop-file==yes:Looping enabled (file)}${?=loop-file==no:Looping disabled (file)}"
@@ -140,24 +148,25 @@ CTRL+l ab-loop
 # [z] [x] [c] [v] [b] [n] [m] [,] [.]
 # [Z]  X   C   V   B  [N] [M]
 
-z      show-text "${chapter-list}"
-Z      show-text "${playlist}"
-CTRL+y show-text "${playlist}"
-x      show-text "${track-list}"
+z      script-message osc-chapterlist
+Z      ignore
+x      script-message osc-playlist
 X      ignore
-
-c      set speed 1.0
+c      script-message osc-tracklist
 C      ignore
+
 v      add speed -0.05
-V      ignore
+V      set speed 1.0
 b      add speed +0.05
-B      ignore
+B      set speed 1.0
+
 n      add sub-delay -0.10
-m      add sub-delay +0.10
-CTRL+n set sub-delay 0
-CTRL+m set sub-delay 0
 N      add audio-delay -0.10
+CTRL+n set sub-delay 0
+
+m      add sub-delay +0.10
 M      add audio-delay +0.10
+CTRL+m set sub-delay 0
 
 .      frame-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
 ,      frame-back-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
@@ -167,14 +176,14 @@ M      add audio-delay +0.10
 # [`] [~] [-] [=] [esc] [space] [BackSpace]
 #         [_] [+] [tab] [enter]
 
-<      osd-msg-bar add chapter -1
-`      osd-msg-bar add chapter -1
->      osd-msg-bar add chapter +1
-~      osd-msg-bar add chapter +1
-CTRL+> osd-msg playlist-prev
-CTRL+~ osd-msg playlist-prev
+<      osd-msg-bar add chapter +1
+`      osd-msg-bar add chapter +1
+>      osd-msg-bar add chapter -1
+~      osd-msg-bar add chapter -1
 CTRL+< osd-msg playlist-next
 CTRL+` osd-msg playlist-next
+CTRL+> osd-msg playlist-prev
+CTRL+~ osd-msg playlist-prev
 
 -      add sub-scale +0.05                  # increase subtitle font size
 _      add sub-scale -0.05                  # decrease subtitle font size
@@ -186,7 +195,6 @@ SPACE             cycle pause
 IDEOGRAPHIC_SPACE cycle pause
 TAB               cycle mute
 ENTER             show-progress
-SHIFT+ENTER       cycle-values video-rotate 90 180 270 0
 
 BS     set speed 1.0 ; set gamma 0 ; set brightness 0 ; set contrast 0 ; set saturation 0 ; set hue 0 ; show-text "Speed/Gamma/Brightness/Contrast/Saturation/Hue resetted"
 
