--- a/mpv.conf
+++ b/mpv.conf
@@ -106,22 +106,24 @@ volume=100                              # default volume, 100 = unchanged
 
 # Active VOs (and some other options) are set conditionally
 # See here for more information: https://github.com/wm4/mpv-scripts/blob/master/auto-profiles.lua
-# The script was modified to import functions from scripts/auto-profiles-functions.lua
+# on_battery(), is_laptop() and is_dektop() are my own additional functions imported from scripts/auto-profiles-functions.lua
 
 # Defaults for all profiles
 vo=opengl
 tscale=catmull_rom                      # sharp: oversample <-> linear (triangle) <-> catmull_rom <-> mitchell <-> gaussian <-> bicubic : smooth
 opengl-early-flush=no
 opengl-pbo=yes
+sigmoid-slope=10
 
 
 [high-quality]
 profile-desc=cond:is_desktop() and get('width', math.huge) < 3840
-scale=ewa_lanczossharp
-cscale=ewa_lanczossoft
+scale=ewa_hanning
+scale-radius=3.2383154841662362
+cscale=ewa_lanczos
 dscale=mitchell
-scale-antiring=0.7
-cscale-antiring=0.7
+scale-antiring=0
+cscale-antiring=0
 dither-depth=auto
 correct-downscaling=yes
 sigmoid-upscaling=yes
@@ -146,8 +148,8 @@ profile-desc=cond:is_laptop() and (on_battery() or get('width', math.huge) >= 19
 scale=bilinear
 cscale=bilinear
 dscale=bilinear
-scale-antiring=0.0
-cscale-antiring=0.0
+scale-antiring=0
+cscale-antiring=0
 dither-depth=no
 correct-downscaling=no
 sigmoid-upscaling=no
@@ -164,9 +166,8 @@ profile-desc=cond:get('width', -math.huge) >= 3840
 vd-lavc-threads=32
 
 [4K-inverted]
-profile-desc=cond:get('width', -math.huge) < 3840
+profile-desc=cond:get('width', math.huge) < 3840
 vd-lavc-threads=0
-
 
 [default]
 
@@ -179,22 +180,12 @@ vd-lavc-threads=0
 #cache=yes
 #cache-default=500000                    # size in KB
 #cache-backbuffer=250000                 # size in KB
-cache-secs=100                          # how many seconds of audio/video to prefetch
+cache-secs=100                           # how many seconds of audio/video to prefetch
 user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:47.0) Gecko/20100101 Firefox/47.0'
 
 [protocol.http]
 #cache=yes
 #cache-default=500000                    # size in KB
 #cache-backbuffer=250000                 # size in KB
-cache-secs=100                          # how many seconds of audio/video to prefetch
+cache-secs=100                           # how many seconds of audio/video to prefetch
 user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:47.0) Gecko/20100101 Firefox/47.0'
-
-[extension.gif]
-cache=no
-no-pause
-loop-file=yes
-
-[extension.webm]
-#cache=no
-#no-pause
-#loop-file=yes
