Use mpv's OSC alongside torque's progressbar

--- a/lua-settings/osc.conf
+++ b/lua-settings/osc.conf
@@ -1,7 +1,6 @@
-
 layout=slimbox
 seekbarstyle=slider
 valign=0.9
-deadzonesize=0.9
+deadzonesize=1
 hidetimeout=500
-minmousemove=1
+#minmousemove=999999
