--- a/encoding-profiles.conf
+++ b/encoding-profiles.conf
@@ -12,7 +12,7 @@
 # will be loaded instead.
 #
 # Then, list all profiles by
-#   mpv -profile help | grep enc-
+#   mpv --profile=help | grep enc-
 #
 # The following kinds of encoding profiles exist:
 #   enc-a-*:  initialize an audio codec including good defaults
@@ -27,19 +27,19 @@
 # options, or even switch to another codec.
 #
 # You can view the exact options a profile sets by
-#   mpv -show-profile enc-to-bb-9000
+#   mpv --show-profile=enc-to-hp-slate-7
 #
 # Examples:
-#   mpv -profile enc-to-dvdpal -o outfile.mpg infile.mkv
-#   mpv -profile enc-f-avi -ofps 30 -o outfile.avi infile.mkv
-#   mpv -profile enc-v-mpeg4 -ovcopts-add qscale=7 -profile enc-a-mp3 -oacopts-add b=320k -o outfile.avi infile.mkv
+#   mpv --profile=enc-to-dvdpal --o=outfile.mpg infile.mkv
+#   mpv --profile=enc-f-avi --ofps=30 --o=outfile.avi infile.mkv
+#   mpv --profile=enc-v-mpeg4 --ovcopts-add=qscale=7 --profile=enc-a-mp3 --oacopts-add=b=320k --o=outfile.avi infile.mkv
 
 ################
 # audio codecs #
 ################
 [enc-a-aac]
-profile-desc = "AAC (libfaac or FFmpeg)"
-oac = libfdk_aac,libfaac,libvo_aacenc,aac
+profile-desc = "AAC (libfdk-aac or FFmpeg)"
+oac = libfdk_aac,aac
 oacopts = b=96k
 
 [enc-a-ac3]
@@ -53,9 +53,15 @@ oac = libmp3lame
 oacopts = b=128k
 
 [enc-a-vorbis]
-profile-desc = "Vorbis (libvorbis)"
+profile-desc = "Vorbis (libvorbis or FFmpeg)"
 oac = libvorbis,vorbis
 oacopts = qscale=3
+
+[enc-a-opus]
+profile-desc = "Opus (libopus or FFmpeg)"
+oac = libopus,opus
+audio-samplerate = 48000
+oacopts = b=96k
 
 ################
 # video codecs #
@@ -66,21 +72,17 @@ ovc = h263
 ovcopts = qscale=4
 
 [enc-v-h264]
-profile-desc = "H.264 (x264) (crf=23)"
+profile-desc = "H.264 (x264)"
 ovc = libx264
 ovcopts = preset=medium,crf=23,threads=0
-vf-add = noformat=444p,noformat=444p9,noformat=444p10,noformat=422p,noformat=422p9,noformat=422p10
-
-[enc-v-h264-hq]
-profile-desc = "H.264 (x264) (crf=18)"
-ovc = libx264
-ovcopts = preset=slow,crf=18,threads=0
-vf-add = noformat=444p,noformat=444p9,noformat=444p10,noformat=422p,noformat=422p9,noformat=422p10
+# If you want to restrict the output video to something compatible with most
+# hardware and basic decoders, add "profile=high,level=41" to ovcopts above and
+# uncomment the following line to avoid errors when source video isn't yuv420p:
+#vf-add = format=yuv420p
 
 [enc-v-mpeg2]
 profile-desc = "MPEG-2 Video (FFmpeg)"
 ovc = mpeg2video
-ovcopts-clr = yes
 
 [enc-v-mpeg4]
 profile-desc = "MPEG-4 Part 2 (FFmpeg)"
@@ -90,40 +92,12 @@ ovcopts = qscale=4
 [enc-v-vp8]
 profile-desc = "VP8 (libvpx)"
 ovc = libvpx
-ovcopts = qmin=2,qmax=50,crf=8,b=2000K,threads=8
+ovcopts = speed=0,lag-in-frames=8,slices=2,threads=0,b=2M,crf=10,qmin=0,qmax=36
 
-[enc-v-vp8-hq]
-profile-desc = "VP8 (libvpx) HQ"
-ovc = libvpx
-ovcopts = qmin=0,qmax=50,crf=6,b=3500K,threads=8
-
-[enc-v-vp8-720]
-profile-desc = "VP8 (libvpx) scaled to 720p"
-ovc = libvpx
-ovcopts = qmin=2,qmax=50,crf=8,b=2000K,threads=8
-vf-add = scale=w=-3:h=720
-sws-scaler = spline
-
-[enc-v-vp8-480]
-profile-desc = "VP8 (libvpx) scaled to 480"
-ovc = libvpx
-ovcopts = qmin=3,crf=8,b=1500K,threads=8
-vf-add = scale=w=-3:h=480
-sws-scaler = spline
-
-[enc-v-vp8-360]
-profile-desc = "VP8 (libvpx) scaled to 360"
-ovc = libvpx
-ovcopts = qmin=3,crf=8,b=1500K,threads=8
-vf-add = scale=w=-3:h=360
-sws-scaler = spline
-
-[enc-v-vp8-1440-width]
-profile-desc = "VP8 (libvpx) scaled to 360"
-ovc = libvpx
-ovcopts = qmin=3,crf=8,b=1500K,threads=8
-vf-add = scale=w=1440:h=-3
-sws-scaler = spline
+[enc-v-vp9]
+profile-desc = "VP9 (libvpx)"
+ovc = libvpx-vp9
+ovcopts = speed=6,lag-in-frames=8,slices=2,threads=0,crf=18,qmin=0,qmax=36
 
 ###########
 # formats #
@@ -151,62 +125,16 @@ of = mp4
 ocopyts = yes
 profile = enc-v-h264
 profile = enc-a-aac
-ofopts-clr = yes
-
-[enc-f-mp4-hq]
-profile-desc = "H.264 + AAC (for MP4) HQ"
-of = mp4
-ocopyts = yes
-profile = enc-v-h264-hq
-profile = enc-a-aac
-ofopts-clr = yes
+## equivalent to using qt-faststart tool
+## can be used to speed up seeking when streaming
+# ofopts = movflags=+faststart
 
 [enc-f-webm]
-profile-desc = "VP8 + Vorbis (for WebM)"
+profile-desc = "VP9 + Opus (for WebM)"
 of = webm
 ocopyts = yes
-profile = enc-v-vp8
-profile = enc-a-vorbis
-ofopts-clr = yes
-
-[enc-f-webm-hq]
-profile-desc = "VP8 + Vorbis (for WebM) HQ"
-of = webm
-ocopyts = yes
-profile = enc-v-vp8-hq
-profile = enc-a-vorbis
-ofopts-clr = yes
-
-[enc-f-webm-720]
-profile-desc = "VP8 + Vorbis (for WebM) video scaled to 720p"
-of = webm
-ocopyts = yes
-profile = enc-v-vp8-720
-profile = enc-a-vorbis
-ofopts-clr = yes
-
-[enc-f-webm-480]
-profile-desc = "VP8 + Vorbis (for WebM) video scaled to 480p"
-of = webm
-ocopyts = yes
-profile = enc-v-vp8-480
-profile = enc-a-vorbis
-ofopts-clr = yes
-
-[enc-f-webm-360]
-profile-desc = "VP8 + Vorbis (for WebM) video scaled to 360p"
-of = webm
-ocopyts = yes
-profile = enc-v-vp8-360
-profile = enc-a-vorbis
-ofopts-clr = yes
-
-[enc-f-webm-1440-width]
-profile-desc = "VP8 + Vorbis (for WebM) video scaled to a width of 1440"
-of = webm
-ocopyts = yes
-profile = enc-v-vp8-1440-width
-profile = enc-a-vorbis
+profile = enc-v-vp9
+profile = enc-a-opus
 ofopts-clr = yes
 
 ##################
@@ -217,93 +145,51 @@ profile-desc = "DVD-Video PAL, use dvdauthor -v pal -a ac3+en (MUST be used with
 profile = enc-v-mpeg2
 profile = enc-a-ac3
 of = dvd
-ofopts-add = packetsize=2048,muxrate=10080000
+ofopts-append = packetsize=2048
+ofopts-append = muxrate=10080000
 ofps = 25
 oharddup = yes
 ovfirst = yes # dvdauthor needs this
 audio-samplerate = 48000
-ovcopts-add = g=15,b=6000000,maxrate=9000000,minrate=0,bufsize=1835008
+ovcopts = g=15,b=6000000,maxrate=9000000,minrate=0,bufsize=1835008
 
 [enc-to-dvdntsc]
 profile-desc = "DVD-Video NTSC, use dvdauthor -v ntsc -a ac3+en (MUST be used with 4:3 or 16:9 aspect, and 720x480, 704x480, 352x480 or 352x240 resolution)"
 profile = enc-v-mpeg2
 profile = enc-a-ac3
 of = dvd
-ofopts-add = packetsize=2048,muxrate=10080000
+ofopts-append = packetsize=2048
+ofopts-append = muxrate=10080000
 ofps = 24000/1001
 oharddup = yes
 ovfirst = yes # dvdauthor needs this
 audio-samplerate = 48000
-ovcopts-add = g=18,b=6000000,maxrate=9000000,minrate=0,bufsize=1835008
-
-[enc-to-bb-9000]
-profile-desc = "MP4 for Blackberry Bold 9000"
-profile = enc-f-mp4
-vf-add = dsize=480:360:0:2,scale=w=0:h=0,dsize=-1:-1 # native screen res, letterbox
-ovcopts-add = maxrate=1500k,bufsize=1000k,rc_init_occupancy=900k,refs=1,profile=baseline
-omaxfps = 30
+ovcopts = g=18,b=6000000,maxrate=9000000,minrate=0,bufsize=1835008
 
 [enc-to-nok-n900]
 profile-desc = "MP4 for Nokia N900"
 profile = enc-f-mp4
 # DW = 800, DH = 480, SAR = 1
 vf-add = lavfi=graph="scale=floor(min(min(800\,dar*480)\,in_w*max(1\,sar))/2+0.5)*2:floor(min(min(800/dar\,480)\,in_h*max(1/sar\,1))/2+0.5)*2,setsar=sar=1"
-ovcopts-add = profile=baseline,level=30,maxrate=10000k,bufsize=10000k,rc_init_occupancy=9000k,refs=5
+ovcopts-append = profile=baseline
+ovcopts-append = level=30
+ovcopts-append = maxrate=10000k
+ovcopts-append = bufsize=10000k
+ovcopts-append = rc_init_occupancy=9000k
+ovcopts-append = refs=5
 omaxfps = 30
 
 [enc-to-nok-6300]
 profile-desc = "3GP for Nokia 6300"
 profile = enc-f-3gp
 ofps = 25
-vf-add = scale=w=176:h=144
+vf-add = lavfi=graph="scale=176:144"
 audio-samplerate = 16000
 audio-channels = 1
 oacopts-add = b=32k
 
-[enc-to-psp]
-profile-desc = "MP4 for PlayStation Portable"
-profile = enc-f-mp4
-ofps = 30000/1001
-vf-add = scale=w=480:h=272,dsize=480:270
-audio-samplerate = 48000
-audio-channels = 2
-ovcopts-add = b=512k,profile=baseline
-
-[enc-to-iphone-noscale]
-profile-desc = "MP4 for iPhone (no scaling)"
-profile = enc-f-mp4
-oautofps = yes # iphone supports 30fps max
-ovcopts-add = maxrate=2500k,bufsize=1000k,rc_init_occupancy=900k,level=30,profile=baseline
-omaxfps = 30
-
-[enc-to-iphone]
-profile-desc = "MP4 for iPhone (480x320)"
-profile = enc-to-iphone-noscale
-vf-add = dsize=480:320:1:2,scale=w=0:h=0,dsize=-1:-1 # panscan
-omaxfps = 30
-
-[enc-to-iphone-4]
-profile-desc = "MP4 for iPhone 4 (960x640)"
-profile = enc-to-iphone-noscale
-vf-add = dsize=960:480:1:2,scale=w=0:h=0,dsize=-1:-1 # panscan
-omaxfps = 30
-
-[enc-to-iphone-5]
-profile-desc = "MP4 for iPhone 5 (1136x640)"
-profile = enc-to-iphone-noscale
-vf-add = dsize=1136:480:1:2,scale=w=0:h=0,dsize=-1:-1 # panscan
-omaxfps = 30
-
 [enc-to-hp-slate-7]
 profile-desc = "MP4 for HP Slate 7 (1024x600, crazy aspect)"
-profile = enc-f-mp4
-omaxfps = 30
-ovcopts-add = profile=high
-# DW = 1024, DH = 600, DAR = 97:54 (=> SAR = 2425:2304)
-vf-add = lavfi=graph="scale=floor(min(1024*min(1\,dar/(97/54))\,in_w*max(1\,sar/(2425/2304)))/2+0.5)*2:floor(min(600*min((97/54)/dar\,1)\,in_h*max((2425/2304)/sar\,1))/2+0.5)*2,setsar=sar=1"
-
-[enc-to-hp-slate-7-git]
-profile-desc = "MP4 for HP Slate 7 (1024x600, crazy aspect), FFmpeg-git"
 profile = enc-f-mp4
 omaxfps = 30
 ovcopts-add = profile=high
