--- a/input.conf
+++ b/input.conf
@@ -41,6 +41,8 @@ CTRL+DOWN  add cache-size -50000 ; show-text "Cache Size: ${cache-size}\n| Used:
 
 ALT+RIGHT playlist-next
 ALT+LEFT  playlist-prev
+META+RIGHT playlist-next
+META+LEFT  playlist-prev
 
 ALT+UP    script-message osc-playlist
 ALT+DOWN  script-message osc-playlist
@@ -68,6 +70,7 @@ PGDWN osd-msg-bar seek -600 relative+keyframes
 )      add balance +0.1 ; show-text "Audio Balance (pan): ${balance}"  #                                  right
 
 §      script-binding progressbar/toggle-inactive-bar
+±      script-binding repl/repl-enable
 !      cycle ontop
 @      cycle-values vf "format=colorlevels=full" "format=colorlevels=auto" "format=colorlevels=limited"
 
@@ -82,8 +85,8 @@ $      ignore
 # [q] [w] [e] [r] [t] [y] u [i] [o] [p]
 # [Q] [W] [E] [R] [T] [Y] U [I]  O   P
 
-q      quit
-Q      quit-watch-later
+Q      quit
+q      quit-watch-later
 
 w      script-message osc-playlist
 W      playlist-clear
@@ -100,12 +103,13 @@ Y      set ab-loop-a no
 u      set ab-loop-b ${time-pos}
 U      set ab-loop-b no
 
-i      script-binding stats/display_stats
-I      script-binding stats/display_stats_toggle
+#i      script-binding stats/display-stats
+#I      script-binding stats/display-stats-toggle
 o      osd
 O      ignore
-p      cycle-values opengl-shaders "~/.mpv/shaders/nnedi3-nns32-win8x4.hook" ""
-P      cycle-values opengl-shaders "~/.mpv/shaders/SSimSuperRes.glsl" ""
+p      cycle-values opengl-shader "~/.mpv/shaders/SSimSuperRes.glsl" ""
+P      cycle-values opengl-shader "~/.mpv/shaders/nnedi3-nns32-win8x4.hook" ""
+CTRL+p cycle-values opengl-shader "~/.mpv/shaders/SSimDownscaler.glsl" ""
 
 
 
@@ -121,25 +125,25 @@ CTRL+s cycle secondary-sid
 ALT+s  cycle-values ass-force-margins "yes" "no"  # does not work with :blend-subtitles
 
 d      cycle-values window-scale "1.5" "2.0" "0.5" "1.0" ; show-text "Scale: ${window-scale}"
-D      cycle-values video-aspect "4:3" "16:9" "16:10" "2.35:1" "no" "-1"
+D      cycle edition
 CTRL+d cycle video
 
 f      cycle fullscreen ; show-text "Scale: ${window-scale}"
 F      vf clr "" ; show-text "Filters cleared"
 g      cycle-values video-sync display-resample audio ; cycle-values interpolation yes no ; show-text "Interpolation: ${interpolation} (${tscale})"
-G cycle-values tscale "oversample" "linear" "catmull_rom" "mitchell" "bicubic" ; show-text "Interpolation: ${interpolation} (${tscale})"
+G      cycle-values tscale "oversample" "linear" "catmull_rom" "mitchell" "bicubic" ; show-text "Interpolation: ${interpolation} (${tscale})"
 CTRL+g cycle-values interpolation no yes ; show-text "Interpolation: ${interpolation} (${tscale})"
-h      set input-ipc-server "/tmp/mpvsocket" ; show-text "Socket set"
-H      vf clr "" ; set input-ipc-server "" ; show-text "Filters cleared"
-CTRL+h vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.py:2
-j      cycle deband
-J      cycle deinterlace
-CTRL+j script-binding autodeint
+ALT+g  vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.py:2
+#h     set input-ipc-server "/tmp/mpvsocket" ; show-text "Socket set"
+#H     vf clr "" ; set input-ipc-server "" ; show-text "Filters cleared"
+h      vf toggle vapoursynth=~~/vs-scripts/decimate.py  # fix 24FPS videos encoded at 30FPS
+H      cycle deband
+j      cycle deinterlace
+J      script-binding autodeint
 k      vf toggle "lavfi=[hqdn3d=2.0]"       # denoise
 K      vf toggle "lavfi=[unsharp]"          # sharpen
-CTRL+k vf toggle vapoursynth=~~/vs-scripts/decimate.py  # fix 24FPS videos encoded at 30FPS
 
-l      cycle-values loop yes no ; show-text "${?=loop==inf:Looping enabled}${?=loop==no:Looping disabled}"
+l      cycle-values loop-playlist yes no ; show-text "${?=loop-playlist==inf:Looping enabled}${?=loop-playlist==no:Looping disabled}"
 L      cycle-values loop-file yes no ; show-text "${?=loop-file==yes:Looping enabled (file)}${?=loop-file==no:Looping disabled (file)}"
 CTRL+l ab-loop
 
