--- a/lua-settings/torque-progressbar.conf
+++ b/lua-settings/torque-progressbar.conf
@@ -14,13 +14,12 @@ display-scale-factor=1
 # Changing the font will likely require changing the hover-time margin
 # settings and the offscreen-pos settings.
 #default-style=\fnSource Sans Pro\b1\bord2\fs30\c&HFC799E&\3c&H2D2D2D&
-default-style=\fnSource Sans Pro\bord0\b1\fs48\c&H629B16&\3c&H000000&
+#default-style=\fnSource Sans Pro\bord0\b1\fs48\c&H629B16&\3c&H000000&
+default-style=\fnSource Sans Pro\bord0\b1\fs48\c&H5511FF&\3c&H000000&
 
 #[=[ progress bar options ]=]#
 # whether or not to draw the progress bar at all.
 enable-bar=yes
-# Hide the bar even when it is inactive.
-hide-inactive=no
 # [[ bar size options ]] #
 # Inactive bar height. Pixels. Sets `hide-inactive` to true if
 # bar-height-inactive <= 0.
@@ -103,8 +102,8 @@ chapter-marker-width-active=2
 chapter-marker-active-height-fraction=1
 # [[ chapter marker color options ]] #
 # color of chapter marker before/after it has been passed. BGR hex.
-chapter-marker-before-style=\c&H629B16&
-chapter-marker-after-style=\c&H000000&
+chapter-marker-before-style=\c&H5511FF&
+chapter-marker-after-style=\c&H5511FF&
 
 #[=[ timing options ]=]#
 # Amount of time (in seconds) to display OSD when button is pressed.
