--- a/mpv.conf
+++ b/mpv.conf
@@ -18,13 +18,24 @@ deinterlace=auto                        # 'auto' does not imply interlacing-dete
 cursor-autohide-fs-only                 # don't autohide the cursor in window mode, only fullscreen
 input-media-keys=no                     # enable/disable OSX media keys
 cursor-autohide=1000                    # autohide the curser after 1s
+prefetch-playlist=yes
+force-seekable=yes
 
 screenshot-format=png
 screenshot-png-compression=8
 screenshot-template='~/Desktop/%F (%P) %n'
 
 hls-bitrate=max                         # use max quality for HLS streams
-ytdl-format=bestvideo[height<=?1080][fps<=?30][vcodec!=?vp9][protocol!=http_dash_segments]+bestaudio/best #[protocol!=http_dash_segments][protocol!=rtmp]
+
+[ytdl-desktop]
+profile-desc=cond:is_desktop()
+ytdl-format=bestvideo[height<=?1080][fps<=?30][protocol!=http_dash_segments]+bestaudio/best
+
+[ytdl-laptop]
+profile-desc=cond:is_laptop()
+ytdl-format=bestvideo[height<=?1080][fps<=?30][vcodec!=?vp9][protocol!=http_dash_segments]+bestaudio/best
+
+[default]
 
 
 #########
@@ -61,15 +72,19 @@ osd-bar-w=60                            # width of " " "
 # Subtitles #
 #############
 
-sub-use-margins
-sub-ass-force-margins
+sub-auto=fuzzy                          # external subs don't have to match the file name exactly to autoload
+sub-file-paths-append=ass                    # search for external subs in these relative subdirectories
+sub-file-paths-append=srt
+sub-file-paths-append=sub
+sub-file-paths-append=subs
+sub-file-paths-append=subtitles
 
 demuxer-mkv-subtitle-preroll            # try to correctly show embedded subs when seeking
-sub-auto=fuzzy                          # external subs don't have to match the file name exactly to autoload
-sub-paths=ass:srt:sub:subs:subtitles    # search for external subs in the listed subdirectories
 embeddedfonts=yes                       # use embedded fonts for SSA/ASS subs
 sub-fix-timing=no                       # do not try to fix gaps (which might make it worse in some cases)
 sub-ass-force-style=Kerning=yes         # allows you to override style parameters of ASS scripts
+sub-use-margins
+sub-ass-force-margins
 
 # the following options only apply to subtitles without own styling (i.e. not ASS but e.g. SRT)
 sub-font="Source Sans Pro Semibold"
@@ -110,14 +125,14 @@ volume=100                              # default volume, 100 = unchanged
 
 # Defaults for all profiles
 vo=opengl
-tscale=catmull_rom                      # sharp: oversample <-> linear (triangle) <-> catmull_rom <-> mitchell <-> gaussian <-> bicubic : smooth
+tscale=catmull_rom                      # [sharp] oversample <-> linear (triangle) <-> catmull_rom <-> mitchell <-> gaussian <-> bicubic [smooth]
 opengl-early-flush=no
 opengl-pbo=yes
 sigmoid-slope=10
 
 
 [high-quality]
-profile-desc=cond:is_desktop() and get('width', math.huge) < 3840
+profile-desc=cond:false and is_desktop() and get('width', math.huge) < 3840
 scale=ewa_hanning
 scale-radius=3.2383154841662362
 cscale=ewa_lanczos
