--- a/mpv.conf
+++ b/mpv.conf
@@ -73,7 +73,7 @@ osd-bar-w=60                            # width of " " "
 #############
 
 sub-auto=fuzzy                          # external subs don't have to match the file name exactly to autoload
-sub-file-paths-append=ass                    # search for external subs in these relative subdirectories
+sub-file-paths-append=ass               # search for external subs in these relative subdirectories
 sub-file-paths-append=srt
 sub-file-paths-append=sub
 sub-file-paths-append=subs
@@ -132,7 +132,7 @@ sigmoid-slope=10
 
 
 [high-quality]
-profile-desc=cond:false and is_desktop() and get('width', math.huge) < 3840
+profile-desc=cond:is_desktop() and get('width', math.huge) < 3840
 scale=ewa_hanning
 scale-radius=3.2383154841662362
 cscale=ewa_lanczos
