--- a/input.conf
+++ b/input.conf
@@ -39,10 +39,10 @@ CTRL+LEFT  osd-msg-bar sub-seek -1
 CTRL+UP    add cache-size +50000 ; show-text "Cache Size: ${cache-size}\n| Used: ${cache-used}\n| Free: ${cache-free}"
 CTRL+DOWN  add cache-size -50000 ; show-text "Cache Size: ${cache-size}\n| Used: ${cache-used}\n| Free: ${cache-free}"
 
-ALT+RIGHT  playlist-next
-ALT+LEFT   playlist-prev
-META+RIGHT playlist-next
-META+LEFT  playlist-prev
+ALT+RIGHT  playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
+ALT+LEFT   playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
+META+RIGHT playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
+META+LEFT  playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
 
 ALT+UP    script-message osc-playlist
 ALT+DOWN  script-message osc-playlist
@@ -67,10 +67,10 @@ PGDWN osd-msg-bar seek -600 relative+keyframes
 9      add volume -2 ; show-text "Volume: ${volume}"
 (      add balance -0.1 ; show-text "Audio Balance (pan): ${balance}"  # adjust audio balance in favor of left
 0      add volume +2 ; show-text "Volume: ${volume}"
-)      add balance +0.1 ; show-text "Audio Balance (pan): ${balance}"  #                                  right
+)      add balance +0.1 ; show-text "Audio Balance (pan): ${balance}"  #                                 right
 
-§      script-binding progressbar/toggle-inactive-bar
-±      script-binding repl/repl-enable
+`      script-binding progressbar/toggle-inactive-bar
+~      script-binding repl/repl-enable
 !      cycle ontop
 @      cycle-values vf "format=colorlevels=full" "format=colorlevels=auto" "format=colorlevels=limited"
 
@@ -81,18 +81,24 @@ $      ignore
 &      ignore
 *      ignore
 
+ALT+1 cycle-values opengl-shaders "~/.mpv/shaders/nnedi3-nns32-win8x4.hook" ""
+ALT+2 cycle-values opengl-shaders "~/.mpv/shaders/FineSharp.glsl" ""
+ALT+3 cycle-values opengl-shaders "~/.mpv/shaders/SSimSuperRes.glsl" ""
+ALT+4 cycle-values opengl-shaders "~/.mpv/shaders/SSimDownscaler.glsl" ""
+
+
 
 # [q] [w] [e] [r] [t] [y] u [i] [o] [p]
-# [Q] [W] [E] [R] [T] [Y] U [I]  O   P
+# [Q] [W] [E] [R] [T] [Y] U [I]  O  [P]
 
 Q      quit
 q      quit-watch-later
 
 w      script-message osc-playlist
 W      playlist-clear
-e      playlist-prev
+e      playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
 E      playlist-prev ; script-message osc-playlist
-r      playlist-next
+r      playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
 R      playlist-next ; script-message osc-playlist
 
 t      cycle-values video-rotate 90 180 270 0
@@ -105,19 +111,22 @@ U      set ab-loop-b no
 
 #i      script-binding stats/display-stats
 #I      script-binding stats/display-stats-toggle
-o      osd
+o      cycle-values osd-level 3 1
 O      ignore
-p      cycle-values opengl-shader "~/.mpv/shaders/SSimSuperRes.glsl" ""
-P      cycle-values opengl-shader "~/.mpv/shaders/nnedi3-nns32-win8x4.hook" ""
-CTRL+p cycle-values opengl-shader "~/.mpv/shaders/SSimDownscaler.glsl" ""
+p      run "/usr/local/bin/bash" "-c" "$HOME/Documents/Code/Haskell/hsbooru/crap/showfile-essential ${filename}"
+P      playlist-shuffle ; show-text "${playlist-pos-1}/${playlist-count}"
 
+[     ignore
+]     ignore
+{     ignore
+}     ignore
 
 
 # [a] [s] [d] [f] [g] [h] [j] [k] [l]
 # [A] [S] [D] [F] [G] [H] [J] [K] [L]
 
 a      cycle audio                          # switch audio streams
-A      cycle-values af "lavfi=[dynaudnorm=f=200:g=11:r=0.2]" "acompressor" ""         # dynamic range compression
+A      cycle-values af "lavfi=[dynaudnorm=f=200:g=5:r=0.1]" "acompressor" ""         # dynamic range compression
 
 s      cycle sub                            # cycle through subtitles
 S      cycle sub-visibility
@@ -130,18 +139,20 @@ CTRL+d cycle video
 
 f      cycle fullscreen ; show-text "Scale: ${window-scale}"
 F      vf clr "" ; show-text "Filters cleared"
-g      cycle-values video-sync display-resample audio ; cycle-values interpolation yes no ; show-text "Interpolation: ${interpolation} (${tscale})"
-G      cycle-values tscale "oversample" "linear" "catmull_rom" "mitchell" "bicubic" ; show-text "Interpolation: ${interpolation} (${tscale})"
-CTRL+g cycle-values interpolation no yes ; show-text "Interpolation: ${interpolation} (${tscale})"
-ALT+g  vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.py:2
-#h     set input-ipc-server "/tmp/mpvsocket" ; show-text "Socket set"
-#H     vf clr "" ; set input-ipc-server "" ; show-text "Filters cleared"
-h      vf toggle vapoursynth=~~/vs-scripts/decimate.py  # fix 24FPS videos encoded at 30FPS
-H      cycle deband
+g      cycle-values stretch-image-subs-to-screen "yes" "no"
+G      cycle-values stretch-dvd-subs "yes" "no"
+
+h      cycle-values video-sync display-resample audio ; cycle-values interpolation yes no ; show-text "Interpolation: ${interpolation} (${tscale})"
+H      cycle-values tscale "linear" "catmull_rom" "mitchell" "bicubic" "oversample" ; show-text "Interpolation: ${interpolation} (${tscale})"
+CTRL+h cycle-values interpolation no yes ; show-text "Interpolation: ${interpolation} (${tscale})"
+ALT+h  vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.py:2
+
 j      cycle deinterlace
 J      script-binding autodeint
-k      vf toggle "lavfi=[hqdn3d=2.0]"       # denoise
-K      vf toggle "lavfi=[unsharp]"          # sharpen
+k      vf toggle vapoursynth=~~/vs-scripts/decimate.py  # fix 24FPS videos encoded at 30FPS
+K      cycle deband
+#k      vf toggle "lavfi=[hqdn3d=2.0]"       # denoise
+#K      vf toggle "lavfi=[unsharp]"          # sharpen
 
 l      cycle-values loop-playlist yes no ; show-text "${?=loop-playlist==inf:Looping enabled}${?=loop-playlist==no:Looping disabled}"
 L      cycle-values loop-file yes no ; show-text "${?=loop-file==yes:Looping enabled (file)}${?=loop-file==no:Looping disabled (file)}"
@@ -150,44 +161,43 @@ CTRL+l ab-loop
 
 
 # [z] [x] [c] [v] [b] [n] [m] [,] [.]
-# [Z]  X   C   V   B  [N] [M]
+# [Z]  X   C   V  [B] [N] [M] [<] [>]
 
-z      script-message osc-chapterlist
-Z      ignore
-x      script-message osc-playlist
+z      osd-msg-bar add chapter +1 ; show-text "${?chapter:Chapter: ${chapter}}"
+Z      osd-msg-bar add chapter -1 ; show-text "${?chapter:Chapter: ${chapter}}"
+
+x      script-message osc-chapterlist
 X      ignore
-c      script-message osc-tracklist
+c      script-message osc-playlist
 C      ignore
+v      script-message osc-tracklist
+V      ignore
 
-v      add speed -0.05
-V      set speed 1.0
 b      add speed +0.05
-B      set speed 1.0
+B      add speed -0.05
+CTRL+b set speed 1.0
 
-n      add sub-delay -0.10
-N      add audio-delay -0.10
+n      add sub-delay +0.10
+N      add sub-delay -0.10
 CTRL+n set sub-delay 0
 
-m      add sub-delay +0.10
-M      add audio-delay +0.10
+m      add audio-delay +0.10
+M      add audio-delay -0.10
 CTRL+m set sub-delay 0
 
-.      frame-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
-,      frame-back-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
+.      osd-msg-bar add chapter +1 ; show-text "${?chapter:Chapter: ${chapter}}"
+,      osd-msg-bar add chapter -1 ; show-text "${?chapter:Chapter: ${chapter}}"
+
+>      frame-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
+<      frame-back-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
+
+CTRL+< osd-msg playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
+CTRL+> osd-msg playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
 
 
 
-# [`] [~] [-] [=] [esc] [space] [BackSpace]
-#         [_] [+] [tab] [enter]
-
-<      osd-msg-bar add chapter +1
-`      osd-msg-bar add chapter +1
->      osd-msg-bar add chapter -1
-~      osd-msg-bar add chapter -1
-CTRL+< osd-msg playlist-next
-CTRL+` osd-msg playlist-next
-CTRL+> osd-msg playlist-prev
-CTRL+~ osd-msg playlist-prev
+# [-] [=] [esc] [space] [BackSpace]
+# [_] [+] [tab] [enter]
 
 -      add sub-scale +0.05                  # increase subtitle font size
 _      add sub-scale -0.05                  # decrease subtitle font size
@@ -244,10 +254,10 @@ AR_PREV        osd-msg-bar seek -10
 AR_PREV_HOLD   osd-msg-bar seek -120
 AR_MENU        show-progress
 AR_MENU_HOLD   cycle mute
-AR_VUP         add volume 1
-AR_VUP_HOLD    add chapter 1
+AR_VUP         add volume +1
+AR_VUP_HOLD    add chapter +1 ; show-text "${?chapter:Chapter: ${chapter}}"
 AR_VDOWN       add volume -1
-AR_VDOWN_HOLD  add chapter -1
+AR_VDOWN_HOLD  add chapter -1 ; show-text "${?chapter:Chapter: ${chapter}}"
 
 
 
@@ -261,8 +271,8 @@ PLAYPAUSE   cycle pause
 STOP        quit
 FORWARD     osd-msg-bar seek +5  relative keyframes
 REWIND      osd-msg-bar seek -5  relative keyframes
-NEXT        osd-msg playlist-next
-PREV        osd-msg playlist-prev
+NEXT        osd-msg playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
+PREV        osd-msg playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
 VOLUME_UP   add volume +2 ; show-text "Volume: ${volume}"
 VOLUME_DOWN add volume -2 ; show-text "Volume: ${volume}"
 MUTE        cycle mute
