--- a/mpv.conf
+++ b/mpv.conf
@@ -14,7 +14,6 @@ use-filedir-conf                        # look for additional config files in th
 pause                                   # no autoplay
 keep-open                               # keep the player open when a file's end is reached
 autofit-larger=100%x95%                 # resize window in case it's larger than W%xH% of the screen
-deinterlace=auto                        # 'auto' does not imply interlacing-detection
 cursor-autohide-fs-only                 # don't autohide the cursor in window mode, only fullscreen
 input-media-keys=no                     # enable/disable OSX media keys
 cursor-autohide=1000                    # autohide the curser after 1s
@@ -125,7 +124,7 @@ volume=100                              # default volume, 100 = unchanged
 
 # Defaults for all profiles
 vo=opengl
-tscale=catmull_rom                      # [sharp] oversample <-> linear (triangle) <-> catmull_rom <-> mitchell <-> gaussian <-> bicubic [smooth]
+tscale=oversample                      # [sharp] oversample <-> linear (triangle) <-> catmull_rom <-> mitchell <-> gaussian <-> bicubic [smooth]
 opengl-early-flush=no
 opengl-pbo=yes
 sigmoid-slope=10
@@ -133,9 +132,10 @@ sigmoid-slope=10
 
 [high-quality]
 profile-desc=cond:is_desktop() and get('width', math.huge) < 3840
-scale=ewa_hanning
-scale-radius=3.2383154841662362
-cscale=ewa_lanczos
+#scale=ewa_hanning
+#scale-radius=3.2383154841662362 hanning with this radius is broken on OSX due to OpenGL driver bug
+scale=ewa_lanczossharp
+cscale=ewa_lanczossoft
 dscale=mitchell
 scale-antiring=0
 cscale-antiring=0
